--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
     "mssql": "^6.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "request": "^2.88.0",
+    "unirest": "^0.6.0"
   }
 }
